@@ -1,3 +1,5 @@
+	* 06/09:
+	- homemade OptionParser
 	* 05/09:
 	- pythonized and slackwarized
 1.4:
